# zk-snark-groth16

./: Cargo.toml  LICENSE
circuit/: Cargo.toml
circuit/macro/src/: lib.rs
circuit/src/: lib.rs
network/: Cargo.toml
network/src/: lib.rs
prover/: Cargo.toml
prover/src/: lib.rs  main.rs  normalization.rs  qap.rs  r1cs.rs
prover/src/normalization/: brackets_reveal.rs  left_right.rs  packing.rs  term.rs
prover/src/r1cs/: normalization.rs
prover/src/r1cs/normalization/: left_right.rs
trusted_setup/: Cargo.toml
