[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["net", "time", "io-util"] }
futures.workspace = true
serde.workspace = true
eyre.workspace = true

bincode = { version = "2.0.1", features = ["serde"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
